# deploy

./: .env_template  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
