[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["PopovaYelis <lisa-popova2003@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
django = "4.2"
djangorestframework = "3.14.0"
django-filter = "22.1"
django-debug-toolbar = "4.0.0"
pillow = "9.4.0"
gunicorn = ">=23.0.0,<24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"